--- a/react-world-tour/src/Components/Countries/Countries.css
+++ b/react-world-tour/src/Components/Countries/Countries.css
@@ -3,3 +3,13 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
 }
+
+.flag-container img{
+    width: 60px;
+    height: 60px;
+    gap: 10px;
+    padding: 16px;
+    margin: 16px;
+    border-radius: 10px;
+    border: 2px solid purple;
+}
