--- a/react-world-tour/src/Components/Countries/Countries.css
+++ b/react-world-tour/src/Components/Countries/Countries.css
@@ -13,3 +13,8 @@
     border-radius: 10px;
     border: 2px solid purple;
 }
+.coun-css{
+    border: 1px solid purple;
+    padding: 8px;
+    margin: 8px;
+}
